# rdkrobot_ws

./: .gitattributes  .gitignore  1.txt  ARCHITECTURE.md  CLAUDE.md  Dockerfile.arm64  README.md  walkthrough.md
.github/workflows/: build_and_release.yml
scripts/: build_arm64.sh  deploy_arm64.sh  deploy_pull.sh  fix_gray_walls.py  install_dependencies.sh  map2world.py  test_greedy_mesh.py
src/LSLIDAR_X_ROS2/src/lslidar_driver/launch/: lsn10p_launch.py
src/LSLIDAR_X_ROS2/src/lslidar_driver/src/: input.cc  lslidar_driver.cc  lslidar_driver_node.cc
src/m-explore-ros2/explore/include/explore/: explore.h
src/m-explore-ros2/explore/src/: costmap_client.cpp  explore.cpp
src/m-explore-ros2/map_merge/config/: params.yaml
src/rdk_robot_api/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/rdk_robot_api/config/: robot_params.yaml
src/rdk_robot_api/launch/: api.launch.py
src/rdk_robot_api/rdk_robot_api/: __init__.py  config.py  log_manager.py  main.py  manager.py  models.py  ros_node.py  scheduler.py  utils.py
src/rdk_robot_api/rdk_robot_api/routes/: __init__.py  agent.py  explore.py  maps.py  nav.py  patrol.py  robot.py  sim.py  slam.py  system.py  voice.py
src/rdk_robot_api/resource/: rdk_robot_api
src/rdk_robot_api/static/: index.html  voice.html
src/rdk_robot_api/static/css/: style.css
src/rdk_robot_api/static/js/: app.js  app.js.bak  gamepad.js  map.js  navigation.js  patrol.js  ui.js  voice.js  websocket.js
src/rdk_robot_apps/: package.xml  setup.cfg  setup.py
src/rdk_robot_apps/rdk_robot_apps/: auto_localize.py
src/rdk_robot_bringup/: README.md  package.xml  setup.cfg  setup.py
src/rdk_robot_bringup/config/: explore.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params.yaml_controller_server.tmp  nav2_params_sim.yaml  nav2_sim_params.yaml  slam_view.rviz
src/rdk_robot_bringup/launch/: auto_mapping.launch.py  auto_mapping_sim.launch.py  bringup_base.launch.py  bringup_rviz.launch.py  gazebo_bringup.launch.py  localization.launch.py  nav_with_map.launch.py  navigation.launch.py  sim_all_in_one.launch.py  sim_auto_mapping.launch.py  sim_nav_with_map.launch.py  sim_slam_nav.launch.py  slam.launch.py  slam_all_in_one.launch.py  slam_nav.launch.py
src/rdk_robot_bringup/rdk_robot_bringup/: auto_localize.py  odom_tf_broadcaster.py  patrol_node.py
src/rdk_robot_bringup/urdf/: rdk_robot.urdf  rdk_robot_gazebo.urdf
src/rdk_robot_bringup/worlds/: hallway.world
src/rdk_robot_core/: CMakeLists.txt  package.xml
src/rdk_robot_core/src/: odom_tf_broadcaster.cpp  patrol_node.cpp
src/rdk_voice_assistant/: README.md  install_voice_dependencies.sh  package.xml  requirements-local-voice.txt  setup.cfg  setup.py
src/rdk_voice_assistant/config/: city_codes.json  llm_dialog.example.yaml  local_voice.yaml  places.yaml  rdk_official_voice.yaml  voice_assistant.yaml
src/rdk_voice_assistant/launch/: llm_dialog.launch.py  local_voice.launch.py  rdk_official_voice.launch.py  voice_assistant.launch.py
src/rdk_voice_assistant/rdk_voice_assistant/: check_voice_runtime.py  intent_parser.py  llm_dialog_node.py  local_stt_node.py  local_tts_node.py  rdk_asr_bridge_node.py  rdk_tts_bridge_node.py  sound_source_localization_node.py  test_mimo_runtime.py  tts_queue.py  vad.py  voice_assistant_node.py  voice_utils.py  web_dialog_node.py
(+2 files in other folders)
